# const-size-flatten

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: flatmap.rs  flatten.rs  flatten_base.rs  lib.rs
tests/: test.rs  tests.rs
