[package]
name = "const-size-flatten"
version = "0.2.0"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Flatten and FlatMap with constant inner iterator size"
repository = "https://github.com/schuelermine/const-size-flatten"
keywords = ["no-std", "iterator"]
categories = ["data-structures", "no-std", "no-std::no-alloc", "rust-patterns"]
